@@ -1715,3 +1715,7 @@
 2013-10-21  Ryuan Choi (ryuan)
 
         * fileselector : Monitor and update changes of selected path automatically while EIO is working.
+
+2013-10-22  Amitesh Singh (_ami_)
+
+        * slider : Show popup on left/right/up/down key down press and hide on left/right/up/down key up press.
